# CPP-Project-Development-Specification

./: README.md
.cache/clangd/index/: a.cpp.326F41ED2AA1C5BE.idx  a.h.F0B3FF4CF50430B0.idx  b.cpp.E97AA857F2CD8F00.idx  b.h.CF829B30AC406044.idx  c.cpp.725F0FAB5D5F9E9F.idx  c.h.F74FEE75D3038DE8.idx  main.cpp.57D18265AD84D25A.idx
1.2防止头文件重复包含/: CMakeLists.txt  b.cpp  b.h  c.cpp  c.h  main.cpp  readme.md
1.头文件/1.2防止头文件重复包含/: .gitignore  a.cpp  a.h
1.头文件/1.3导入你的依赖/: readme.md
